--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>map</title>
+<!--    导入界面图标-->
+    <link rel="shortcut icon" href="./static/images/favicon.ico" type="image/x-icon" />
     <script src="/static/Cesium/Cesium.js"></script>
     <script type="text/javascript" src="./static/CesiumHeatmap.js"></script>
     <script type="text/javascript" src="./static/heatmap.min.js"></script>
